Updated the UriUtils